checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000387689.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#32: 
> > > arch/x86_64/kernel/asm-offsets.c:1: error: -mpreferred-stack-boundary=3

WARNING:TYPO_SPELLING: 'dependant' may be misspelled - perhaps 'dependent'?
#55: 
> dependant, the alignment constraints vary based on the word size.
  ^^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:TYPO_SPELLING: 'Thats' may be misspelled - perhaps 'That's'?
#66: 
Thats makes sense - good catch.
^^^^^

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000387689.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 3 warnings, 0 checks, 22 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000387689.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
